--- a/public/how-we-can-help/pharmaceutical.html
+++ b/public/how-we-can-help/pharmaceutical.html
@@ -329,15 +329,23 @@
               <li class="secondLi">
                 <a href="../products-services/divestment.html">Divestment</a>
               </li>
-              <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
+              <li class="secondLi">
+                <a href="../products-services/markets.html"
+                  >Unlicensed Markets</a
+                >
+              </li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Services</a></li>
+              <li class="mainLi">
+                <a href="../products-services/services.html">Services</a>
+              </li>
               <li class="secondLi">
-                <a href="http://">Managed Access Programs</a>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs</a
+                >
               </li>
               <li class="secondLi">
                 <a href="http://">Clinical Supplies Management</a>
@@ -359,7 +367,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -488,12 +500,18 @@
             <li>
               <a href="../products-services/divestment.html">Divestment</a>
             </li>
-            <li><a href="">Unlicensed Markets</a></li>
+            <li>
+              <a href="../products-services/markets.html">Unlicensed Markets</a>
+            </li>
             <li><a href="">Our Products</a></li>
           </ul>
           <span class="title">SERVICES</span>
           <ul>
-            <li><a href="">Managed Access Programs</a></li>
+            <li>
+              <a href="../products-services/managed-access-programs.html"
+                >Managed Access Programs</a
+              >
+            </li>
             <li><a href="">Clinical Supplies Management</a></li>
             <li><a href="">Real World Data</a></li>
             <li><a href="">Medical Science Liaison (MSLs)</a></li>
@@ -649,7 +667,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
