--- a/public/index.html
+++ b/public/index.html
@@ -341,9 +341,13 @@
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Services</a></li>
+              <li class="mainLi">
+                <a href="./products-services/services.html">Services</a>
+              </li>
               <li class="secondLi">
-                <a href="http://">Managed Access Programs</a>
+                <a href="./products-services/managed-access-programs.html"
+                  >Managed Access Programs</a
+                >
               </li>
               <li class="secondLi">
                 <a href="http://">Clinical Supplies Management</a>
@@ -365,7 +369,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="./products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -821,7 +829,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="./products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
