--- a/public/how-we-can-help/healtcare.html
+++ b/public/how-we-can-help/healtcare.html
@@ -336,9 +336,13 @@
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Services</a></li>
+              <li class="mainLi">
+                <a href="../products-services/services.html">Services</a>
+              </li>
               <li class="secondLi">
-                <a href="http://">Managed Access Programs</a>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs</a
+                >
               </li>
               <li class="secondLi">
                 <a href="http://">Clinical Supplies Management</a>
@@ -360,7 +364,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -622,7 +630,11 @@
               <h5>Online services for healtcare professionals</h5>
               <ul>
                 <li><a href="#">Hard to find medicine (Clinigen Direct)</a></li>
-                <li><a href="#">Managed Access Programs (Cliniport)</a></li>
+                <li>
+                  <a href="../products-services/managed-access-programs.html"
+                    >Managed Access Programs (Cliniport)</a
+                  >
+                </li>
                 <li><a href="#">Clinigen Products</a></li>
                 <li><a href="#">Special Obtains</a></li>
                 <li><a href="#">Aseptics UK</a></li>
@@ -800,7 +812,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
