--- a/public/how-we-can-help/patient_group.html
+++ b/public/how-we-can-help/patient_group.html
@@ -327,16 +327,26 @@
               <li class="secondLi">
                 <a href="../products-services/partnering.html">Partnering</a>
               </li>
-              <li class="secondLi"><a href="../products-services/divestment.html">Divestment</a></li>
-              <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
+              <li class="secondLi">
+                <a href="../products-services/divestment.html">Divestment</a>
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/markets.html"
+                  >Unlicensed Markets</a
+                >
+              </li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Services</a></li>
+              <li class="mainLi">
+                <a href="../products-services/services.html">Services</a>
+              </li>
               <li class="secondLi">
-                <a href="http://">Managed Access Programs</a>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs</a
+                >
               </li>
               <li class="secondLi">
                 <a href="http://">Clinical Supplies Management</a>
@@ -358,7 +368,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -686,7 +700,7 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li><a href="../products-services/managed-access-programs.html">Managed Access Programs (Cliniport)</a></li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
