--- a/public/products-services/partnering.html
+++ b/public/products-services/partnering.html
@@ -344,7 +344,7 @@
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Services</a></li>
+              <li class="mainLi"><a href="services.html">Services</a></li>
               <li class="secondLi">
                 <a href="http://">Managed Access Programs</a>
               </li>
