--- a/public/products-services/services.html
+++ b/public/products-services/services.html
@@ -277,12 +277,12 @@
                   <a href="../mission.html">Mission</a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuHowCanWeHelp stayActif"
+                  <a href="javascript:" class="menuHowCanWeHelp"
                     >How we can help<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuProductsServices"
+                  <a href="javascript:" class="menuProductsServices stayActif"
                     >Product & Services<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -309,11 +309,19 @@
       <div class="menuCache_howCanWeHelp">
         <ul>
           <li>
-            <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
+            <a href="../how-we-can-help/pharmaceutical.html"
+              >Pharmaceutical & Biotech Companies</a
+            >
           </li>
-          <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="patient_group.html">Patient Groups</a></li>
-          <li><a href="patient.html">Patients</a></li>
+          <li>
+            <a href="../how-we-can-help/healtcare.html"
+              >Healthcare Professionals</a
+            >
+          </li>
+          <li>
+            <a href="../how-we-can-help/patient_group.html">Patient Groups</a>
+          </li>
+          <li><a href="../how-we-can-help/patient.html">Patients</a></li>
         </ul>
       </div>
       <!-------------------------- SOUS MENU PRODUCTS & SERVICES ---------------------------->
@@ -322,29 +330,25 @@
           <div class="menuCache_ProductsServices_Card">
             <ul>
               <li class="mainLi">
-                <a href="../products-services/products.html">Products</a>
+                <a href="products.html">Products</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/partnering.html">Partnering</a>
+                <a href="partnering.html">Partnering</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/divestment.html">Divestment</a>
+                <a href="divestment.html">Divestment</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/markets.html"
-                  >Unlicensed Markets</a
-                >
+                <a href="markets.html">Unlicensed Markets</a>
               </li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi">
-                <a href="../products-services/services.html">Services</a>
-              </li>
+              <li class="mainLi"><a href="services.html">Services</a></li>
               <li class="secondLi">
-                <a href="../products-services/managed-access-programs.html"
+                <a href="managed-access-programs.html"
                   >Managed Access Programs</a
                 >
               </li>
@@ -368,7 +372,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="../products-services/managed-access-programs.html">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -403,13 +411,23 @@
                     ><a href="javascript:" class="menuBack">How we can help</a>
                   </li>
                   <li>
-                    <a href="pharmaceutical.html"
+                    <a href="../how-we-can-help/pharmaceutical.html"
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
-                  <li><a href="patient_group.html">Patient Groups</a></li>
-                  <li><a href="patient.html">Patients</a></li>
+                  <li>
+                    <a href="../how-we-can-help/healtcare.html"
+                      >Healtcare Professionals</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../how-we-can-help/patient_group.html"
+                      >Patient Groups</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../how-we-can-help/patient.html">Patients</a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -443,40 +461,178 @@
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
-      <div class="mainHeaderPatient">
-        <div class="mainHeaderPatient_contain">
-          <span>HOW WE CAN HELP</span>
-          <h3>PATIENTS</h3>
+      <div class="mainHeaderProducts">
+        <div class="mainHeaderProducts_contain">
+          <span>PRODUCTS & SERVICES</span>
+          <h3>SERVICES</h3>
+          <input type="button" value="Watch video" class="btnVert" />
         </div>
       </div>
-      <!----------------------------------------------- MENU FIXED ----------------------------------->
-      <div class="menuFixedPatient">
-        <ul>
-          <li><a href="javascript:">Information for Patients</a></li>
-        </ul>
-      </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
-      <div class="containerPatient">
-        <div class="contain">
-          <div class="contain_1">
-            <h3>INFORMATION FOR PATIENTS</h3>
+      <div class="containerProducts">
+        <div class="contain_L">
+          <div class="contain_L_1">
             <h4>
-              In order to protect patients and to comply with the regulations
-              related to the medicines we supply, requests for access to
-              medicine must come from a healthcare professional.
+              More and more pharmaceutical and biotech companies are developing
+              novel, targeted therapies that offer new treatment options.
             </h4>
             <p>
-              If you are a patient or are visiting this site on behalf of a
-              patient, please contact your healthcare professional to discuss
-              your treatment options.
+              It’s great news for patients - and a growing challenge for
+              companies.
             </p>
+            <p>
+              Running international clinical trials and providing early access
+              for these medicines is increasingly complex and expensive. It can
+              be more difficult to predict where in the world eligible patients
+              live and even more difficult to get the medicine to them as
+              quickly and as compliantly as possible.
+            </p>
+            <p>
+              Companies need a flexible global partner focused on their specific
+              needs. A partner who who can guide them on the best way to enable
+              access in line with both their and the patients' needs.
+            </p>
+            <p>That’s when they need Clinigen.</p>
+            <h3>HOW WE HELP</h3>
+            <ul>
+              <li>
+                <a href="">Managed Access Programs</a>
+              </li>
+              <li>
+                <a href="">Clinical Supplies Management</a>
+              </li>
+              <li><a href="">Real World Data</a></li>
+              <li><a href="">Medical Science Liaison (MSLs)</a></li>
+            </ul>
           </div>
-          <div class="relatedLinksPatient">
+          <div class="relatedLinksProducts">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="#">About Clinigen</a></li>
-              <li><a href="../mission.html">Mission</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Pharmaceutical & Biotech Companies</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="contain_R">
+          <!--------------------------------------- FORMULAIRE ------------------------------------------------>
+          <div class="formulaire">
+            <div class="formulaire_titre">
+              <span class="formulaire_imgLettre"></span>
+              <h4 class="formulaire_t">Get in touch</h4>
+            </div>
+            <form action="">
+              <span class="formulaire_libelle">* Mandatory field</span>
+              <input
+                type="text"
+                name="Name Surname"
+                id="inputName"
+                placeholder="Name Surname*"
+                class="formulaire_input"
+              />
+              <input
+                type="text"
+                name="your@email.com"
+                id="inputMail"
+                placeholder="your@email.com*"
+                class="formulaire_input"
+              />
+              <input
+                type="text"
+                name="Organisation"
+                id="inputOrg"
+                placeholder="Organisation*"
+                class="formulaire_input"
+              />
+              <input
+                type="text"
+                name="Contact no."
+                id="inputNumber"
+                placeholder="Contact no.*"
+                class="formulaire_input"
+              />
+              <span class="formulaire_sousTitre"
+                >Reason for enquiry (select one)</span
+              >
+              <!------------------------------------ COMBO 1 ------------------------------------------>
+              <div class="formulaire_input formulaire_combo1">
+                I am a healtcare professional...
+              </div>
+              <div class="formulaire_sousMenu1">
+                <ul>
+                  <li class="formulaire_option1">
+                    I am a healtcare professional...
+                  </li>
+                  <li class="formulaire_option1">Looking for a medicine</li>
+                  <li class="formulaire_option1">
+                    Trying to resolve a medicine shortage (EU and US)
+                  </li>
+                  <li class="formulaire_option1">
+                    Trying to resolve a medicine shortage (Asia, Australia)
+                  </li>
+                  <li class="formulaire_option1">
+                    With a medical information enquiry
+                  </li>
+                  <li class="formulaire_option1">
+                    Who would like to request a MSL visit
+                  </li>
+                </ul>
+              </div>
+              <!------------------------------------ COMBO 2 ------------------------------------------>
+              <div class="formulaire_input formulaire_combo2">
+                I am an industry professional...
+              </div>
+              <div class="formulaire_sousMenu2">
+                <ul>
+                  <li class="formulaire_option2">
+                    I am an industry professional...
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with biological sample management
+                  </li>
+                  <li class="formulaire_option2">
+                    looking for support with clinigcal trial comparator sourcing
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with clinical trial services
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with early access / named patient
+                    medicine supply
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with managing a mature product portfolio
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with unlicensied supply of medicine into
+                    new markets
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with commercial partnerships
+                    (in-licensing/out-licensing)
+                  </li>
+                </ul>
+              </div>
+              <!------------------------------------ COMBO 3 ------------------------------------------>
+              <div class="formulaire_input formulaire_combo3">
+                I have general questions about...
+              </div>
+              <div class="formulaire_sousMenu3">
+                <ul>
+                  <li class="formulaire_option3">
+                    I have general questions about...
+                  </li>
+                  <li class="formulaire_option3">Customer service</li>
+                  <li class="formulaire_option3">Investor relations</li>
+                  <li class="formulaire_option3">Invoicing/finance</li>
+                </ul>
+              </div>
+              <textarea name="Your message" id=""> </textarea>
+              <input
+                type="button"
+                value="Submit query"
+                class="formulaire_btn"
+              />
+            </form>
           </div>
         </div>
       </div>
@@ -529,7 +685,7 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="../products-services/managed-access-programs.html">Managed Access Programs (Cliniport)</a></li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -560,7 +716,7 @@
     <script src="../src/js/header.js"></script>
     <script src="../src/js/hamburger.js"></script>
     <script src="../src/js/input.js"></script>
-    <script src="../src/js/patient.js"></script>
+    <script src="../src/js/healtcare_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
