End all page in menu
Fini toutes les pages du menu principal
TODO : formulaire sur chaque page adapté sous menu des combo

--- a/public/how-we-can-help/patient_group.html
+++ b/public/how-we-can-help/patient_group.html
@@ -349,11 +349,19 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="../products-services/clinical.html"
+                  >Clinical Supplies Management</a
+                >
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
               <li class="secondLi">
-                <a href="http://">Medical Science Liaison (MSLs)</a>
+                <a href="../products-services/real-world.html"
+                  >Real World Data</a
+                >
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
@@ -700,7 +708,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="../products-services/managed-access-programs.html">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="../products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
