--- a/public/how-we-can-help/pharmaceutical.html
+++ b/public/how-we-can-help/pharmaceutical.html
@@ -348,11 +348,19 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="../products-services/clinical.html"
+                  >Clinical Supplies Management</a
+                >
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
               <li class="secondLi">
-                <a href="http://">Medical Science Liaison (MSLs)</a>
+                <a href="../products-services/real-world.html"
+                  >Real World Data</a
+                >
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
@@ -512,9 +520,19 @@
                 >Managed Access Programs</a
               >
             </li>
-            <li><a href="">Clinical Supplies Management</a></li>
-            <li><a href="">Real World Data</a></li>
-            <li><a href="">Medical Science Liaison (MSLs)</a></li>
+            <li>
+              <a href="../products-services/clinical.html"
+                >Clinical Supplies Management</a
+              >
+            </li>
+            <li>
+              <a href="../products-services/real-world.html">Real World Data</a>
+            </li>
+            <li>
+              <a href="../products-services/medical-science.html"
+                >Medical Science Liaison (MSLs)</a
+              >
+            </li>
           </ul>
         </div>
         <div class="containR">
