--- a/public/index.html
+++ b/public/index.html
@@ -350,9 +350,15 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="./products-services/clinical.html"
+                  >Clinical Supplies Management</a
+                >
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
+              <li class="secondLi">
+                <a href="./products-services/real-world.html"
+                  >Real World Data</a
+                >
+              </li>
               <li class="secondLi">
                 <a href="http://">Medical Science Liaison (MSLs)</a>
               </li>
