--- a/public/products-services/divestment.html
+++ b/public/products-services/divestment.html
@@ -348,14 +348,20 @@
             <ul>
               <li class="mainLi"><a href="services.html">Services</a></li>
               <li class="secondLi">
-                <a href="http://">Managed Access Programs</a>
+                <a href="managed-access-programs.html"
+                  >Managed Access Programs</a
+                >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="clinical.html">Clinical Supplies Management</a>
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
               <li class="secondLi">
-                <a href="http://">Medical Science Liaison (MSLs)</a>
+                <a href="real-world.html">Real World Data</a>
+              </li>
+              <li class="secondLi">
+                <a href="medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
