--- a/public/products-services/managed-access-programs.html
+++ b/public/products-services/managed-access-programs.html
@@ -353,11 +353,15 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="clinical.html">Clinical Supplies Management</a>
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
               <li class="secondLi">
-                <a href="http://">Medical Science Liaison (MSLs)</a>
+                <a href="real-world.html">Real World Data</a>
+              </li>
+              <li class="secondLi">
+                <a href="medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
@@ -464,7 +468,7 @@
       <div class="mainHeaderProducts">
         <div class="mainHeaderProducts_contain">
           <span>SERVICES</span>
-          <h3>MANAGED ACCESS PROGRAMS</h3>
+          <h3 style="width: 700px">MANAGED ACCESS PROGRAMS</h3>
           <input type="button" value="Watch video" class="btnVert" />
         </div>
       </div>
@@ -473,48 +477,27 @@
         <div class="contain_L">
           <div class="contain_L_1">
             <h4>
-              Pharmaceutical and biotech companies know that if they decide to
-              provide access to their medicines prior to commercial launch, they
-              need to plan early.
+              Clinigen Clinical Supplies Management combines market-leading
+              clinical trial supplies like comparator sourcing, packaging and
+              labelling with biological sample management.
             </h4>
             <p>
-              They need to consider the short- and long-term ethical and
-              strategic implications
-            </p>
-            <p>
-              They need to proceed in a way that ensures the right patients get
-              access, that provides healthcare professionals with the
-              information and support they need to safely treat their patients,
-              and that can be rolled out at a regional, national or global
-              level.
-            </p>
-            <p>
-              They need to do so in a way that maximises value for all their
-              stakeholders – patients, healthcare professionals and themselves.
-            </p>
-            <p>That’s where Clinigen come in.</p>
-            <p>
-              As pioneers in early access and compassionate use, with more than
-              30 years’ experience across 100+ countries, Clinigen work in
-              partnership with pharma companies to design and implement Managed
-              Access Programs that serve their clients and help treat patients.
-            </p>
-            <p>
-              They recognise that every client has different goals, and every
-              patient has different challenges – there is no one-size-fits-all.
-            </p>
-            <p>
-              Clinigen’s flexible approach and industry-leading experience means
-              that their clients get the right solution – and patients get the
-              right medicine.
+              Part of Clinigen’s global supply chain facility and depot network,
+              Clinical Supplies Management deliver tailored solutions for
+              clients to ensure their clinical trials are a success, regardless
+              of the size or scope, from Phase I to Phase IV projects.
             </p>
           </div>
           <div class="relatedLinksProducts">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="#">Clinical Supplies Management</a></li>
-              <li><a href="#">Real World Data</a></li>
-              <li><a href="#">Medical Science Liaison (MSLs)</a></li>
+              <li><a href="clinical.html">Clinical Supplies Management</a></li>
+              <li><a href="real-world.html">Real World Data</a></li>
+              <li>
+                <a href="medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
+              </li>
             </ul>
           </div>
         </div>
