--- a/public/how-we-can-help/healtcare.html
+++ b/public/how-we-can-help/healtcare.html
@@ -345,11 +345,19 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="../products-services/clinical.html"
+                  >Clinical Supplies Management</a
+                >
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
               <li class="secondLi">
-                <a href="http://">Medical Science Liaison (MSLs)</a>
+                <a href="../products-services/real-world.html"
+                  >Real World Data</a
+                >
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
