--- a/public/mission.html
+++ b/public/mission.html
@@ -354,9 +354,15 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="./products-services/clinical.html"
+                  >Clinical Supplies Management</a
+                >
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
+              <li class="secondLi">
+                <a href="./products-services/real-world.html"
+                  >Real World Data</a
+                >
+              </li>
               <li class="secondLi">
                 <a href="http://">Medical Science Liaison (MSLs)</a>
               </li>
@@ -689,7 +695,11 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li><a href="./products-services/managed-access-programs.html">Managed Access Programs (Cliniport)</a></li>
+              <li>
+                <a href="./products-services/managed-access-programs.html"
+                  >Managed Access Programs (Cliniport)</a
+                >
+              </li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
