--- a/public/products-services/services.html
+++ b/public/products-services/services.html
@@ -353,11 +353,15 @@
                 >
               </li>
               <li class="secondLi">
-                <a href="http://">Clinical Supplies Management</a>
+                <a href="clinical.html">Clinical Supplies Management</a>
               </li>
-              <li class="secondLi"><a href="http://">Real World Data</a></li>
               <li class="secondLi">
-                <a href="http://">Medical Science Liaison (MSLs)</a>
+                <a href="real-world.html">Real World Data</a>
+              </li>
+              <li class="secondLi">
+                <a href="medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
               </li>
             </ul>
           </div>
@@ -496,13 +500,19 @@
             <h3>HOW WE HELP</h3>
             <ul>
               <li>
-                <a href="">Managed Access Programs</a>
+                <a href="managed-access-programs.html"
+                  >Managed Access Programs</a
+                >
               </li>
               <li>
-                <a href="">Clinical Supplies Management</a>
+                <a href="clinical.html">Clinical Supplies Management</a>
               </li>
-              <li><a href="">Real World Data</a></li>
-              <li><a href="">Medical Science Liaison (MSLs)</a></li>
+              <li><a href="real-world.html">Real World Data</a></li>
+              <li>
+                <a href="medical-science.html"
+                  >Medical Science Liaison (MSLs)</a
+                >
+              </li>
             </ul>
           </div>
           <div class="relatedLinksProducts">
